# swanti

./: .gitignore  archive.py  award_generate.py  data.py  dispatch.py  gen_award.cmd  googleinterface.py  graph.py  image.py  imgurinterface.py  main.py  nsinterface.py  pyproject.toml  utils.py
config/: award_notes.txt  award_volume.txt  awards.txt  benefits.txt  census_notes.txt  censuses.txt  contact.txt  credit.txt  crs.txt  endocap.txt  endorse_delegate.txt  endorse_everyone.txt  endorsement_count_census.txt  endotarting_performance_census.txt  faq.txt  footer.txt  header.txt  homepage.txt  howto.txt  index.txt  logging.ini  nations_not_endorse_crsdel.txt  nations_not_in_wa.txt  news.txt  news1.txt  notes.txt  number_of_nations_endorsed_census.txt  spcg.txt  statistics.txt  statistics_delegate_transition.txt  swan_knights.txt  the_portrait_of_tsp.txt
