[tool.poetry]
name = "swanti"
version = "0.1.0"
description = "TSP SWAN script (Experimental)"
authors = ["USoVietnam"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.3.0"
pyimgur = "^0.6.0"
pygraphviz = "^1.10"
networkx = "^2.8.8"
requests = "^2.28.1"
google-api-python-client = "^2.15.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
